# DevContext

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
devcontext/: __init__.py
devcontext/agents/: __init__.py  code_agent.py  docs_agent.py  review_agent.py  supervisor.py
devcontext/api/: routes.py
devcontext/config/: llm.py  settings.py
devcontext/mcp_server/: __init__.py  server.py
devcontext/rag/: __init__.py  evaluator.py  ingestion.py  retriever.py
devcontext/tools/: docs_tools.py  file_tools.py  git_tools.py
docs/: sample.md
tests/: test_agents.py  test_mcp.py  test_rag.py  test_smoke.py
