[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devcontext"
version = "0.1.0"
description = "Agentic developer tool and knowledge assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["devcontext"]
