[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devcontext"
version = "0.1.0"
description = "Agentic developer tool and knowledge assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "langgraph>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.6.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mcp>=1.6.0",
    "gitpython>=3.1.0",
    "ragas>=0.2.0",
    "langsmith>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["devcontext"]